Migrate to fiber and add auth middleware (GOLANG)
